--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ input.form-control {
 }
 
 .breadcrumb .breadcrumb-item a {
-    color: #ac8a1c;
+    color: #b08906;
     text-decoration: none;
 }
 
